* Fix runtime attach when bytebuddy is in application classpath - {pull}2116[#2116]
* Fix failed integration between agent traces and host metrics coming from Beats/Elastic-Agent due to incorrect hostname
discovery - {pull}2205[#2205]
* Fix infinitely kept-alive transactions in Hikari connection pool - {pull}2210[#2210]

[float]
===== Refactorings
* Loading the agent from an isolated class loader - {pull}2109[#2109]
* Refactorings in the `apm-agent-plugin-sdk` that may imply breaking changes for beta users of the external plugin mechanism
** `WeakMapSupplier.createMap()` is now `WeakConcurrent.buildMap()` and contains more builders - {pull}2136[#2136]
** `GlobalThreadLocal` has been removed in favor of `DetachedThreadLocal`. To make it global, use `GlobalVariables` - {pull}2136[#2136]
** `DynamicTransformer.Accessor.get().ensureInstrumented` is now `DynamicTransformer.ensureInstrumented` - {pull}#2164[#2164]
** The `@AssignTo.*` annotations have been removed.
   Use the `@Advice.AssignReturned.*` annotations that come with the latest version of Byte Buddy.
   If your plugin uses the old annotations, it will be skipped.
   {pull}2171[#2171]
* Switching last instrumentations (`trace_methods`, sparkjava, JDK `HttpServer` and Struts 2) to
`TracerAwareInstrumentation` - {pull}#2170[#2170]
* Replace concurrency plugin maps to `SpanConcurrentHashMap` ones - {pull}#2173[#2173]
* Align User-Agent HTTP header with other APM agents - {pull}#2177[#2177]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.26.0]]
==== 1.26.0 - 2021/09/14

===== Potentially breaking changes
* If you rely on Database span subtype and use Microsoft SQL Server, the span subtype has been changed from `sqlserver`
to `mssql` to align with other agents.

[float]
===== Breaking changes
* Stop collecting the field `http.request.socket.encrypted` in http requests - {pull}2136[#2136]

[float]
===== Features
* Improved naming for Spring controllers - {pull}1906[#1906]